5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1595_825.log
== TEST (2019-03-28 23:31:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import * 
1 = float(input('x'))
2 = pi*a**2
3 = 4/3*pi*a**3
print(round(2,3))
print(round(3,3))


-- ERROR:
File "XXXX", line 5
    1 = float(input())
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:31:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import * 
x1 = float(input('x'))
x2 = pi*a**2
x3 = 4/3*pi*a**3
print(round(x2,3))
print(round(x3,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x2 = pi*a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:31:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import * 
x1 = float(input('x'))
x2 = pi*a**2
x3 = 4/3*pi*a**3
print(round(x2,3))
print(round(x3,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x2 = pi*a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:32:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import * 
x1 = float(input('x'))
x2 = pi*a**2
x3 = 4/3*pi*a**3
print(round(x2,3))
print(round(x3,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x2 = pi*a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:32:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import * 
x1 = float(input('x'))
x2 = pi*a**2
x3 = 4/3*pi*a**3
print(round(x2,3))
print(round(x3,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x2 = pi*a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:32:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import * 
x1 = float(input('x'))
x2 = pi*a**2
x3 = 4/3*pi*a**3
print(round(x2,3))
print(round(x3,3))


-- EXECUTION TIME:
0.162046
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/825/main.py", line 6, in <module>
    x2 = pi*a**2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:35:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
from math import *
x = float(input'valor')
y = pi*a**2
z = 4/3*pi*a**3
print(round(y,3))
print(round(z,3))


-- EXECUTION TIME:
0.130047
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 4
    x = float(input'valor')
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:35:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
from math import *
x = float(input'valor')
y = pi*a**2
z = 4/3*pi*a**3
print(round(y,3))
print(round(z,3))


-- ERROR:
File "XXXX", line 4
    x = float(input'valor')
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:36:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
from math import *
x = float(input('valor'))
y = pi*a**2
z = 4/3*pi*a**3
print(round(y,3))
print(round(z,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    y = pi*a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:36:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
from math import *
x = float(input('valor'))
y = pi*a**2
z = 4/3*pi*a**3
print(round(y,3))
print(round(z,3))


-- EXECUTION TIME:
0.137716
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/825/main.py", line 5, in <module>
    y = pi*a**2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:36:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
from math import *
x = float(input("valor"))
y = pi*a**2
z = 4/3*pi*a**3
print(round(y,3))
print(round(z,3))


-- EXECUTION TIME:
0.168681
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/825/main.py", line 5, in <module>
    y = pi*a**2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:37:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
from math import *
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.164271
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
